# AltFS

./: .clang-format  .gitignore  .pre-commit-config.yaml  AltFS.sln  CMakeLists.txt  conanfile.txt
AltFS/: ActiveObject.h  AltFS.cpp  AltFS.h  AltFS.rc  AltFS.vcxproj  AltFS.vcxproj.filters  AltFSDlg.cpp  AltFSDlg.h  CMakeLists.txt  FSUIPCEngine.cpp  FSUIPCEngine.h  LuaEngine.cpp  LuaEngine.h  LuaModule.h  LuaXPlane.cpp  LuaXPlane.h  Resource.h  stdafx.cpp  stdafx.h
AltFS/Src/: AltFS.cpp  AltFS.rc  AltFSDlg.cpp  AltFSDlg.h  FSUIPCEngine.cpp  FSUIPCEngine.h  WinContext.h  stdafx.h
AltFS/res/: AltFS.rc2
Docs/: Offsets.txt  XPUIPCOffsets.cfg
Docs/Exchanging Data with X-Plane.rtfd/: TXT.rtf
LuaEngine/: CMakeLists.txt  LuaEngine.cpp  LuaEngine.h  LuaEngine.vcxproj  LuaEngine.vcxproj.filters  LuaLogging.cpp  LuaLogging.h  LuaModule.h  LuaXPlane.cpp  LuaXPlane.h  OffsetStatsGenerator.cpp
LuaEngine/Include/LuaEngine/: LuaEngine.h  LuaLogging.h  LuaModule.h  LuaXPlane.h  OffsetStatsGenerator.h
LuaEngine/Src/: LuaEngine.cpp  LuaLogging.cpp  LuaXPlane.cpp  OffsetStatsGenerator.cpp  stdafx.h
LuaTest/: CMakeLists.txt  LuaTest.cpp  LuaTest.vcxproj  LuaTest.vcxproj.filters
LuaTest/Src/: LuaTest.cpp
XPlaneUDPClientCpp/: ActiveObject.cpp  ActiveObject.h  BeaconListener.cpp  BeaconListener.h  CMakeLists.txt  UDPClient.cpp  UDPClient.h  XPlaneUDPClientCpp.vcxproj  XPlaneUDPClientCpp.vcxproj.filters
XPlaneUDPClientCpp/Include/XPlaneUDPClientCpp/: ActiveObject.h  BeaconListener.h  UDPClient.h  UDPClientAsync.h  Utils.h
XPlaneUDPClientCpp/Src/: ActiveObject.cpp  BeaconListener.cpp  ObjectPool.h  UDPClient.cpp  UDPClientAsync.cpp  stdafx.h
XPlaneUDPClientCpp/Tests/: BeaconListenerTests.cpp  UDPClientTests.cpp
promise-cpp/: CMakeLists.txt  LICENSE.md  Readme.md
promise-cpp/asio/: io.hpp  timer.hpp
promise-cpp/include/promise-cpp/: promise.hpp
promise-cpp/include/promise-cpp/asio/: io.hpp  timer.hpp
promise-cpp/include/promise-cpp/promise/: allocator.hpp  any.hpp  debug.hpp  list.hpp  misc.hpp  stack.hpp  std_addon.hpp
promise-cpp/include/promise-cpp/simple_task/: simple_task.hpp
promise-cpp/test/: asio_benchmark_test.cpp  asio_http_client.cpp  asio_http_server.cpp  asio_timer.cpp  simple_benchmark_test.cpp  test0.cpp
scripts/: script.lua  xplane.lua
